# stock-option-trade-tracker

./: .gitignore  IMPLEMENTATION_SUMMARY.md  PULL_REQUEST.md  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
alembic/: MIGRATION_GUIDE.md  env.py
alembic/versions/: 3f1aabbd2713_add_strategy_column_to_trades.py
config/: ibkr.example.json
docs/: DASHBOARD_GUIDE.md  IBKR_SETUP.md
examples/: README.md  basic_usage.py  dashboard_demo.py  encryption_example.py  portfolio_analysis.py
src/trade_tracker/: __init__.py
src/trade_tracker/analytics/: __init__.py  metrics.py  pnl.py  strategy.py
src/trade_tracker/database/: __init__.py  connection.py  encryption.py  models.py  repository.py
src/trade_tracker/integrations/: __init__.py  base.py  credentials.py  exceptions.py  ibkr.py  manager.py
src/trade_tracker/models/: __init__.py  account.py  position.py  trade.py
src/trade_tracker/utils/: export.py
src/trade_tracker/visualization/: __init__.py  charts.py  dashboard.py
tests/: __init__.py  conftest.py
tests/unit/: test_charts.py  test_credentials.py  test_dashboard_filters.py  test_database_encryption.py  test_database_models.py  test_database_repository.py  test_export.py  test_ibkr_integration.py  test_integration_manager.py  test_metrics.py  test_models.py  test_pnl_calculator.py  test_strategy_analytics.py  test_strategy_timeline.py
